--- a/app/src/main/res/layout/item_chiuit.xml
+++ b/app/src/main/res/layout/item_chiuit.xml
@@ -1,35 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="match_parent"
-  android:layout_height="wrap_content"
-  android:layout_margin="8dp">
-
-  <LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="12dp"
-    android:orientation="horizontal">
+    android:layout_margin="8dp">
 
-    <TextView
-      android:id="@+id/txv_content"
-      android:layout_width="0dp"
-      android:layout_height="match_parent"
-      android:layout_weight="5"
-      android:padding="4dp"
-      android:gravity="center"
-      android:text="@string/chiuit_example"
-      android:textSize="14sp"/>
+  <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:padding="12dp"
+      android:orientation="horizontal">
+
+    <!-- Add a new button for delete action -->
 
     <ImageButton
-      android:id="@+id/ibt_share"
-      android:layout_width="0dp"
-      android:layout_height="match_parent"
-      android:layout_weight="1"
-      android:background="@android:color/transparent"
-      android:src="@drawable/ic_send"/>
+        android:id="@+id/ibt_delete"
+        android:layout_width="3dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:background="@android:color/transparent"
+        app:srcCompat="@android:drawable/ic_menu_delete" />
 
-     <!--TODO: Add a new button for delete action-->
+    <TextView
+        android:id="@+id/txv_content"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="5"
+        android:padding="4dp"
+        android:gravity="center"
+        android:text="@string/chiuit_example"
+        android:textSize="14sp"/>
+
+    <ImageButton
+        android:id="@+id/ibt_share"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:background="@android:color/transparent"
+        android:src="@drawable/ic_send"/>
+
 
   </LinearLayout>
 
